# bzipper

./: CHANGELOG.md  Cargo.toml  README.md
bzipper/: Cargo.toml
bzipper/src/: lib.rs
bzipper/src/buf/: mod.rs  test.rs
bzipper/src/buffer/: mod.rs  test.rs
bzipper/src/decode/: mod.rs  test.rs  tuple.rs
bzipper/src/deserialise/: mod.rs  test.rs  tuple.rs
bzipper/src/dstream/: mod.rs
bzipper/src/encode/: mod.rs  test.rs  tuple.rs
bzipper/src/error/: mod.rs
bzipper/src/error/decode_error/: mod.rs
bzipper/src/error/encode_error/: mod.rs
bzipper/src/error/size_error/: mod.rs
bzipper/src/error/string_error/: mod.rs
bzipper/src/error/utf16_error/: mod.rs
bzipper/src/error/utf8_error/: mod.rs
bzipper/src/fixed_iter/: mod.rs
bzipper/src/fixed_string/: mod.rs  test.rs
bzipper/src/i_stream/: mod.rs
bzipper/src/o_stream/: mod.rs
bzipper/src/serialise/: mod.rs  test.rs  tuple.rs
bzipper/src/sized_encode/: mod.rs  test.rs  tuple.rs
bzipper/src/sized_iter/: mod.rs  test.rs
bzipper/src/sized_slice/: mod.rs  test.rs
bzipper/src/sized_str/: mod.rs  test.rs
bzipper/src/sstream/: mod.rs
bzipper_benchmarks/: Cargo.toml
bzipper_benchmarks/src/: main.rs
bzipper_macros/: Cargo.toml
bzipper_macros/src/: lib.rs
bzipper_macros/src/closure/: mod.rs
bzipper_macros/src/discriminant/: mod.rs
bzipper_macros/src/discriminant_iter/: mod.rs
bzipper_macros/src/generic_name/: mod.rs
bzipper_macros/src/impls/: decode_enum.rs  decode_struct.rs  deserialise_enum.rs  deserialise_struct.rs  encode_enum.rs  encode_struct.rs  mod.rs  serialise_enum.rs  serialise_struct.rs  sized_encode_enum.rs  sized_encode_struct.rs
librum/: Cargo.toml
librum-benchmarks/: Cargo.toml
librum-benchmarks/src/: main.rs
librum-macros/: Cargo.toml
librum-macros/src/: impl_derive_macro.rs  lib.rs
librum-macros/src/discriminants/: mod.rs
librum-macros/src/generic_name/: mod.rs
librum-macros/src/impls/: decode_enum.rs  decode_struct.rs  encode_enum.rs  encode_struct.rs  mod.rs  sized_encode_enum.rs  sized_encode_struct.rs
librum-macros/src/repr/: mod.rs
librum/src/: lib.rs
librum/src/buf/: mod.rs  tests.rs
librum/src/decode/: mod.rs  tests.rs
librum/src/decode_borrowed/: mod.rs
librum/src/encode/: mod.rs  tests.rs
librum/src/error/: bool_decode_error.rs  c_string_decode_error.rs  char_decode_error.rs  collection_decode_error.rs  collection_encode_error.rs  enum_decode_error.rs  enum_encode_error.rs  generic_decode_error.rs  generic_encode_error.rs  isize_encode_error.rs  item_decode_error.rs  item_encode_error.rs  mod.rs  non_zero_decode_error.rs  ref_cell_encode_error.rs  size_error.rs  string_error.rs  system_time_decode_error.rs  usize_encode_error.rs  utf16_error.rs  utf8_error.rs
librum/src/i_stream/: mod.rs
librum/src/o_stream/: mod.rs
librum/src/primitive_discriminant/: mod.rs
librum/src/sized_encode/: mod.rs  tests.rs
librum/src/sized_iter/: mod.rs  tests.rs
librum/src/sized_slice/: cmp.rs  conv.rs  iter.rs  mod.rs  serdes.rs  tests.rs
librum/src/sized_str/: cmp.rs  conv.rs  mod.rs  serdes.rs  tests.rs
oct/: Cargo.toml
oct-benchmarks/: Cargo.toml
oct-benchmarks/src/: main.rs
oct-macros/: Cargo.toml
oct-macros/src/: impl_derive_macro.rs  lib.rs
oct-macros/src/discriminants/: mod.rs
oct-macros/src/generic_name/: mod.rs
oct-macros/src/impls/: decode_enum.rs  decode_struct.rs  encode_enum.rs  encode_struct.rs  mod.rs  sized_encode_enum.rs  sized_encode_struct.rs
oct-macros/src/repr/: mod.rs
oct/src/: lib.rs
oct/src/decode/: mod.rs
oct/src/decode/decode/: mod.rs  tests.rs
oct/src/decode/decode_borrowed/: mod.rs
oct/src/decode/input/: mod.rs
oct/src/encode/: mod.rs
oct/src/encode/encode/: mod.rs  tests.rs
oct/src/encode/output/: mod.rs
oct/src/encode/sized_encode/: mod.rs  tests.rs
oct/src/error/: c_string_decode_error.rs  char_decode_error.rs  collection_decode_error.rs  collection_encode_error.rs  enum_decode_error.rs  enum_encode_error.rs  generic_decode_error.rs  generic_encode_error.rs  input_error.rs  isize_encode_error.rs  item_decode_error.rs  item_encode_error.rs  length_error.rs  mod.rs  non_zero_decode_error.rs  output_error.rs  ref_cell_encode_error.rs  string_error.rs  system_time_decode_error.rs  usize_encode_error.rs  utf16_error.rs  utf8_error.rs
oct/src/primitive_discriminant/: mod.rs
oct/src/sized_iter/: mod.rs  tests.rs
oct/src/sized_slice/: cmp.rs  code.rs  conv.rs  iter.rs  mod.rs  tests.rs
oct/src/sized_str/: cmp.rs  code.rs  conv.rs  mod.rs  tests.rs
oct/src/slot/: mod.rs  tests.rs
src/: lib.rs
src/buffer/: mod.rs
src/d_stream/: mod.rs
src/deserialise/: mod.rs  test.rs
src/deserialise/d_stream/: mod.rs
src/deserialise/deserialise/: mod.rs
src/dstream/: mod.rs
src/error/: mod.rs
src/fixed_string/: mod.rs  test.rs
src/fixed_string_iter/: mod.rs
src/s_stream/: mod.rs
src/serialise/: mod.rs  test.rs
src/serialise/s_stream/: mod.rs
src/serialise/serialise/: mod.rs
src/sstream/: mod.rs
