[package]
name          = "bzipper"
version       = "0.7.0"
edition       = "2021"
rust-version  = "1.81"
documentation = "https://docs.rs/bzipper/"

authors.workspace     = true
description.workspace = true
readme.workspace      = true
homepage.workspace    = true
repository.workspace  = true
license.workspace     = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["alloc", "std"]

alloc = []
std   = []

[dependencies]
bzipper_macros = { path = "../bzipper_macros", version = "0.7.0"}

[lints]
workspace = true
