[package]
name        = "bzipper_benchmarks"
version     = "0.10.1"
edition     = "2021"
description = "bZipper benchmarks."

authors.workspace     = true
readme.workspace      = true
homepage.workspace    = true
repository.workspace  = true

[dependencies]
bzipper = { path = "../bzipper", version = "0.10.1" }

bincode  = "1.3.3"
ciborium = "0.2.2"
rand     = "0.8.5"

borsh = { version =  "1.5.1", features = ["derive"] }
postcard = { version = "1.0.10", features = ["use-std"] }
serde = { version = "1.0.214", features = ["derive"] }

[lints]
workspace = true
