[package]
name          = "bzipper_macros"
version       = "0.6.2"
edition       = "2021"
documentation = "https://docs.rs/bzipper_macros/"

authors.workspace     = true
description.workspace = true
readme.workspace      = true
homepage.workspace    = true
repository.workspace  = true
license.workspace     = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote       = "1.0.37"
syn         = "2.0.75"

[lints]
workspace = true
