[package]
name          = "bzipper_macros"
version       = "0.8.1"
edition       = "2021"
documentation = "https://docs.rs/bzipper_macros/"

authors.workspace     = true
description.workspace = true
readme.workspace      = true
homepage.workspace    = true
repository.workspace  = true
license.workspace     = true
keywords.workspace    = true
categories.workspace  = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote       = "1.0.37"
syn         = "2.0.85"

[lints]
workspace = true
