[package]
name        = "librum-benchmarks"
version     = "0.12.0"
edition     = "2021"
description = "Librum benchmarks."

authors.workspace     = true
readme.workspace      = true
homepage.workspace    = true
repository.workspace  = true

[dependencies]
librum = { path = "../librum", version = "0.12.0", features = ["proc-macro"]}

bincode = "1.3.3"
rand    = "0.8.5"

borsh = { version =  "1.5.1", features = ["derive"] }
postcard = { version = "1.0.10", features = ["use-std"] }
serde = { version = "1.0.214", features = ["derive"] }

[lints]
workspace = true
