[package]
name          = "librum-macros"
version       = "0.13.0"
edition       = "2021"
documentation = "https://docs.rs/librum-macros/"

authors.workspace     = true
description.workspace = true
readme.workspace      = true
homepage.workspace    = true
repository.workspace  = true
license.workspace     = true
keywords.workspace    = true
categories.workspace  = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote       = "1.0.37"
syn         = "2.0.89"

[lints]
workspace = true
