[package]
name          = "librum"
version       = "0.12.0"
edition       = "2021"
rust-version  = "1.83"
documentation = "https://docs.rs/librum/"

authors.workspace     = true
description.workspace = true
readme.workspace      = true
homepage.workspace    = true
repository.workspace  = true
license.workspace     = true
keywords.workspace    = true
categories.workspace  = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["alloc", "proc-macro", "std"]

alloc      = []
proc-macro = ["librum-macros"]
std        = []

[dependencies]
librum-macros = { path = "../librum-macros", version = "0.12.0", optional = true}

[lints]
workspace = true
