[package]
name        = "oct-benchmarks"
version     = "0.14.5"
edition     = "2021"
description = "Oct benchmarks."

authors.workspace    = true
readme.workspace     = true
repository.workspace = true

[dependencies]
oct = { path = "../oct", version = "0.14.0", features = ["proc-macro"]}

bincode  = "1.3.0"
rand     = "0.8.0"
rayon    = "1.10.0"
zerocopy = "0.8.0"

borsh = { version =  "1.5.1", features = ["derive"] }
postcard = { version = "1.0.10", features = ["use-std"] }
serde = { version = "1.0.214", features = ["derive"] }

[lints]
workspace = true
