[package]
name          = "oct-macros"
version       = "0.14.2"
edition       = "2021"
documentation = "https://docs.rs/oct-macros/"

authors.workspace     = true
description.workspace = true
readme.workspace      = true
homepage.workspace    = true
repository.workspace  = true
license.workspace     = true
keywords.workspace    = true
categories.workspace  = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.0"
quote       = "1.0.0"
syn         = "2.0.0"

[lints]
workspace = true
