[package]
name          = "oct-macros"
version       = "0.14.5"
edition       = "2021"
description   = "Octonary transcoder. Procedural macros."
documentation = "https://docs.rs/oct-macros/"
homepage      = "https://crates.io/crates/oct-macros/"

authors.workspace     = true
readme.workspace      = true
repository.workspace  = true
license.workspace     = true
keywords.workspace    = true
categories.workspace  = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.0"
quote       = "1.0.0"
syn         = "2.0.0"

[lints]
workspace = true
